[package]
name = "address-hunter"
version = "0.1.0"
edition = "2021"
[[bench]]
name = "benches"
path = "src/benches/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.11.0"
hex = "0.4.3"
regex = "1.8.3"
secp256k1 = "0.27.0"
sha3 = "0.10.8"
tiny-bip39 = "1.0.0"
tiny-hderive = "0.3.0"
tiny-secp256k1 = "0.1.1"

[dev-dependencies]
criterion = "0.5.1"
